--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
 
     <h1>Hello World</h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JS</li>
+    </ul>
     
 
     <script type="module" src="index.js"></script>
